# infotrie_crawling

./: pyproject.toml  test.csv
infotrie/: api_test.ipynb  collect_data.py  schema.py
